--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  socket_io_client: ^2.0.0-beta.4-nullsafety.0
+  get: ^4.6.1
+  intl: ^0.17.0
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
