--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
     "socket.io": "^4.4.0"
