--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -1,4 +1,4 @@
-name: frontend_flutter
+name: whatsapp_clone
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.1
   intl: ^0.17.0
   shared_preferences: ^2.0.11
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
