--- a/frontend_flutter/android/app/src/main/AndroidManifest.xml
+++ b/frontend_flutter/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.frontend_flutter">
    <application
-        android:label="frontend_flutter"
+        android:label="Whatsapp Clone"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
