--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.11
   http: ^0.13.4
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.7
 
 dev_dependencies:
   flutter_test:
