--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^1.1.2
   build_runner: ^2.1.7
+  contacts_service: ^0.6.3
+  permission_handler: ^9.1.0
 
 dev_dependencies:
   flutter_test:
