--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   contacts_service: ^0.6.3
   permission_handler: ^9.1.0
   image_picker: ^0.8.4+10
+  firebase_core: ^1.13.1
 
 dev_dependencies:
   flutter_test:
