--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
+    "path": "^0.12.7",
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
